--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,18 +1,24 @@
 <main>
-
-<section>
+  <section class="form-section">
     <img src="/assets/SVG/logo.svg" />
-    <h2></h2>
-<button></button>
-<div>
-    <span>or</span>
-</div>
-</section>
+    <h2>{{ title }}</h2>
 
+    <div class="btn-wrapper">
 
-<section>
+        <button class="btn-primary" >{{ primaryBtnText }}</button>
+        <div class="divider" >
+            <div></div>
+          <span>or</span>
+          <div></div>
+        </div>
+        <button class="btn-secondary" >{{ secondaryBtnText }}</button>
+
+    </div>
+
+  </section>
+
+  <section class="main-section">
     <h2>You Should, Move It!</h2>
     <img src="/assets/SVG/main-ilustration.svg" />
-</section>
-
+  </section>
 </main>
