--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,12 @@
-<app-default-login-layout>
+<app-default-login-layout
+
+title="login into your account"
+primaryBtnText="Login Now"
+secondaryBtnText="Signup Now"
+
+>
+
+
 
     
 </app-default-login-layout>
