--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,6 +6,10 @@ secondaryBtnText="Signup Now"
 
 >
 
+<form [formGroup]= "loginForm" >
+    <app-primary-input></app-primary-input>
+    
+</form>
 
 
     
